--- a/pages/311-requests.html
+++ b/pages/311-requests.html
@@ -6,6 +6,7 @@ description: |
       emails, the 311 website or social media.
     </p>
 download: https://www.opendataphilly.org/dataset/311-service-and-information-requests
+metadata: http://metadata.phila.gov/#home/datasetdetails/5543864d20583086178c4e98/representationdetails/5762e19fa237544b2ecfe722/
 ---
 [
   [
