--- a/pages/child_blood_lead_levels_by_ct.html
+++ b/pages/child_blood_lead_levels_by_ct.html
@@ -10,7 +10,8 @@ description: |
   <p> Disclaimer: Numbers are subject to change due to reporting, data quality,
       and data cleaning. Rates can vary depending on lead poisoning definitions.
   </p>
-download: http://www.opendataphilly.org/
+download: https://www.opendataphilly.org/dataset/philadelphia-child-blood-lead-levels
+metadata: http://metadata.phila.gov/#home/datasetdetails/594d26988d68a4593a61bcf0/representationdetails/594d27129fb662583093adac/
 ---
 [
   [
