--- a/pages/li-building-permits.html
+++ b/pages/li-building-permits.html
@@ -9,6 +9,7 @@ description: |
   also be required for new or existing buildings.</p>
   <p>For more information, please visit: http://www.phila.gov/li/Pages/PermitsCertificates.aspx</p>
 download: https://www.opendataphilly.org/dataset/licenses-and-inspections-building-permits
+metadata: http://metadata.phila.gov/#home/datasetdetails/5543868920583086178c4f8f/representationdetails/55438add9b989a05172d0d97/
 ---
 [
   [
