--- a/pages/li-business-licenses.html
+++ b/pages/li-business-licenses.html
@@ -10,7 +10,7 @@ description: |
   <p>Note: Some business licenses are incorrectly missing the associated address
   in this dataset, which may limit searching.</p>
 download: https://www.opendataphilly.org/dataset/licenses-and-inspections-business-licenses
-
+metadata: http://metadata.phila.gov/#home/datasetdetails/5543865a20583086178c4ed2/representationdetails/57e53953dfc5d2be6083dae2/
 ---
 [
   [
