--- a/pages/li-clean-seal.html
+++ b/pages/li-clean-seal.html
@@ -4,6 +4,7 @@ description: |
   <p>Address, date of abatement, and more for properties that
   have been cleaned and sealed by the L&I Clean & Seal Unit.</p>
 download: https://www.opendataphilly.org/dataset/licenses-and-inspections-clean-and-seal
+metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca725c4ae4cd66d3ff68/representationdetails/57d16643de50fa92416f7c12/
 ---
 [
   [
