--- a/pages/li-demolitions.html
+++ b/pages/li-demolitions.html
@@ -3,6 +3,7 @@ title: L&I Demolitions
 description: |
   <p>Inventory of building demolitions occurring within the City of Philadelphia. This includes both demolitions performed by private owners/contractors and by the Dpt of Licenses and Inspections due to dangerous building conditions</p>
 download: https://www.opendataphilly.org/dataset/licenses-and-inspections-demolitions
+metadata: http://metadata.phila.gov/#home/datasetdetails/58dbd271fe779d33cf0e8cad/representationdetails/58dbd271fe779d33cf0e8cb1/
 ---
 [
   [
