--- a/pages/li-inspections.html
+++ b/pages/li-inspections.html
@@ -4,6 +4,7 @@ description: |
   <p>All inspections completed on a property with property
   maintenance violations by an inspector of the Department of Licenses & Inspections.</p>
 download: https://www.opendataphilly.org/dataset/licenses-and-inspections-inspections
+metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca785c4ae4cd66d3ff80/representationdetails/57d1cbd5f802132847d550ba/
 ---
 [
   [
