--- a/pages/li-service-requests.html
+++ b/pages/li-service-requests.html
@@ -8,6 +8,7 @@ description: |
   or if a case is not required, as well as information about the source of the
   request. </p>
 download: https://www.opendataphilly.org/dataset/licenses-and-inspections-service-requests
+metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca6d5c4ae4cd66d3ff52/representationdetails/57cedf7aeeae99993bb0c622/
 ---
 [
   [
