--- a/pages/li-trade-licenses.html
+++ b/pages/li-trade-licenses.html
@@ -6,6 +6,7 @@ description: |
   individual's name, license number, license status issue date, expiration
   date, company name, and revenue code. </p>
 download: https://www.opendataphilly.org/dataset/licenses-and-inspections-trade-licenses
+metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca6e5c4ae4cd66d3ff55/representationdetails/57e52fd0d640401d5d594f45/
 ---
 [
   [
