--- a/pages/li-unsafe.html
+++ b/pages/li-unsafe.html
@@ -4,6 +4,7 @@ description: |
   <p>All active and open "Unsafe" code violations. Reference Section PM-304.1 of
   The Philadelphia Property Maintenance Code</p>
 download: https://www.opendataphilly.org/dataset/licenses-and-inspections-violations
+metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca7a5c4ae4cd66d3ff86/representationdetails/57d2fcd1af067d7747870ee5/
 ---
 [
   [
