--- a/pages/li-violations.html
+++ b/pages/li-violations.html
@@ -4,6 +4,7 @@ description: |
   <p>Violations issued by the Department of Licenses and Inspections in reference
   to the Philadelphia Building Construction and Occupancy Code.</p>
 download: https://www.opendataphilly.org/dataset/licenses-and-inspections-violations
+metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca7a5c4ae4cd66d3ff86/representationdetails/5571b1bde4fb1d91393c215c/
 ---
 [
   [
