--- a/pages/parking-violations.html
+++ b/pages/parking-violations.html
@@ -6,6 +6,7 @@ description:
     violations occurring since 2012 with license plate numbers anonymized
     for privacy.</p>
 download: https://www.opendataphilly.org/dataset/parking-violations
+metadata: http://metadata.phila.gov/#home/datasetdetails/5543865c20583086178c4eda/
 ---
 [
   [
