--- a/pages/property-assessments.html
+++ b/pages/property-assessments.html
@@ -6,6 +6,7 @@ description: |
   visualization by that dimension, and scroll down to view the filtered results
   as a table.</p>
 download: https://www.opendataphilly.org/dataset/opa-property-assessments
+metadata: http://metadata.phila.gov/#home/datasetdetails/5543865f20583086178c4ee5/
 ---
 [
   [
