--- a/pages/vehicle-pedestrian-investigations.html
+++ b/pages/vehicle-pedestrian-investigations.html
@@ -4,6 +4,7 @@ description:
    <p>2014 - Present. Updated daily with 14-day lag for operational approval
    processes.</p>
 download: https://www.opendataphilly.org/dataset/vehicle-pedestrian-investigations
+metadata: http://metadata.phila.gov/#home/datasetdetails/571787614fc865407e3cf2b4/representationdetails/571787614fc865407e3cf2b8/
 ---
 [
   [
