--- a/pages/child_blood_lead_levels_by_zip.html
+++ b/pages/child_blood_lead_levels_by_zip.html
@@ -9,7 +9,8 @@ description: |
   <p>Disclaimer: Numbers are subject to change due to reporting, data quality,
       and data cleaning. Rates can vary depending on lead poisoning definitions.
       </p>
-download: https://opendataphilly.org
+download: https://www.opendataphilly.org/dataset/philadelphia-child-blood-lead-levels
+metadata: http://metadata.phila.gov/#home/datasetdetails/594d26988d68a4593a61bcf0/representationdetails/594d26998d68a4593a61bcf5/
 ---
 [
   [
