--- a/pages/li-imminently-dangerous.html
+++ b/pages/li-imminently-dangerous.html
@@ -4,6 +4,7 @@ description: |
   <p>All active and open "Imminently Dangerous" code violations. Reference Section PM-110 of
   The Philadelphia Property Maintenance Code for more information.</p>
 download: https://www.opendataphilly.org/dataset/licenses-and-inspections-violations
+metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca7a5c4ae4cd66d3ff86/representationdetails/57d1872a8918bd4750d1ba52/
 ---
 [
   [
