--- a/pages/shooting-victims.html
+++ b/pages/shooting-victims.html
@@ -4,6 +4,7 @@ description:
   <p>Criminal Shooting Victims and Officer Involved Shootings from 1/1/15
   Through Yesterday</p>
 download: https://www.opendataphilly.org/dataset/shooting-victims
+metadata: http://metadata.phila.gov/#home/datasetdetails/5719551277d6389f3005a610/representationdetails/5719551277d6389f3005a614/
 ---
 
 [
