--- a/pages/li-building-permits.html
+++ b/pages/li-building-permits.html
@@ -1,13 +1,18 @@
 ---
-title: L&I building permits
+title: L&I building and zoning permits
 description: |
-  <p>The Department of Licenses & Inspections reviews construction plans and
-  conducts building inspections to ensure the safety of the workers and the
-  public. Building permits are required before beginning projects to enlarge,
-  repair, change, add to or demolish a structure, and to install equipment or
-  systems in a structure. Plumbing and electrical permits, among others, may
-  also be required for new or existing buildings.</p>
-  <p>For more information, please visit: http://www.phila.gov/li/Pages/PermitsCertificates.aspx</p>
+  The Department of Licenses & Inspections reviews construction plans and
+    conducts building inspections to ensure the safety of the workers and
+    the public. Zoning permits are issued to authorize new construction or
+    additions to a building or to authorize the change of use in a building
+    or ground. Building permits are required before the start of a specific
+    construction activity to enlarge, repair, change, add to or demolish a
+    structure, and to install equipment or systems in a structure. Depending on
+    the scale or type of construction activity, it may need to be first
+    authorized via a zoning permit. Plumbing and electrical permits, among
+    others, may also be required for new or existing buildings.For more information,
+    please visit: http://www.phila.gov/li/Pages/PermitsCertificates.aspx
+
 download: https://www.opendataphilly.org/dataset/licenses-and-inspections-building-permits
 ---
 [
@@ -91,7 +96,7 @@ download: https://www.opendataphilly.org/dataset/licenses-and-inspections-buildi
   ],
   [
     {
-      "title": "Building permits",
+      "title": "Building and zoning permits",
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
