--- a/pages/real-estate-transfers.html
+++ b/pages/real-estate-transfers.html
@@ -15,7 +15,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457
 		"chartType": "datetime",
 		"provider": "carto",
 		"domain": "phl.carto.com",
-		"dataset": "RTT_SUMMARY_FULL",
+		"dataset": "RTT_SUMMARY",
 		"groupBy": "date_trunc('month',display_date)",
 		"triggerField": "display_date",
 	"baseFilters": [
@@ -35,7 +35,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457
     "description": "The number of transactions in each ZIP Code.",
     "provider": "carto",
     "domain": "phl.carto.com",
-    "dataset": "RTT_SUMMARY_FULL",
+    "dataset": "RTT_SUMMARY",
     "chartType": "choropleth",
     "groupBy": "zip_code",
     "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+zip_codes&format=geojson",
@@ -56,7 +56,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457
 		"description": "Shows the number of documents by type involved in the real estate transfer.",
 		"provider": "carto",
 		"domain": "phl.carto.com",
-		"dataset": "RTT_SUMMARY_FULL",
+		"dataset": "RTT_SUMMARY",
 		"chartType": "bar",
 		"groupBy": "document_type",
 	"baseFilters": [
@@ -77,7 +77,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457
     "chartType": "table",
     "provider": "carto",
     "domain": "phl.carto.com",
-    "dataset": "RTT_SUMMARY_FULL",
+    "dataset": "RTT_SUMMARY",
     "order": "display_date",
     "baseFilters": [
           {
