--- a/pages/li-building-permits.html
+++ b/pages/li-building-permits.html
@@ -1,6 +1,8 @@
 ---
 title: L&I building and zoning permits
 description: |
+  <p><b> ALERT - PLEASE BE ADVISED THAT THIS DATASET IS PRODUCING ERRORS. 01/10/19: We are aware of the issue and are working on fixing it. In the interim, you may experience blank or missing records.</b> </p>
+
   The Department of Licenses & Inspections reviews construction plans and
     conducts building inspections to ensure the safety of the workers and
     the public. Zoning permits are issued to authorize new construction or
