--- a/pages/city_payments.html
+++ b/pages/city_payments.html
@@ -27,17 +27,6 @@ metadata: http://metadata.phila.gov/index.html#home/datasetdetails/5c4243d6a074d
   ], 
   [
     {
-      "title": "Total number of transactions by department",
-      "description": "Total number of payments. Data from aggregate dataset, which includes redacted payments.",
-      "provider": "carto",
-      "domain": "phl.carto.com",
-      "dataset": "city_payments_aggregates",
-      "chartType": "bar",
-      "groupBy": "department_title"
-    }
-  ], 
-  [
-    {
       "title": "Total transaction amounts by character title",
       "description": "Total amounts in USD. Data from aggregate dataset, which includes redacted payments.",
       "provider": "carto",
@@ -51,18 +40,7 @@ metadata: http://metadata.phila.gov/index.html#home/datasetdetails/5c4243d6a074d
   ],
   [
     {
-      "title": "Total number of transactions by character title",
-      "description": "Total number of payments. Data from aggregate dataset, which includes redacted payments.",
-      "provider": "carto",
-      "domain": "phl.carto.com",
-      "dataset": "city_payments_aggregates",
-      "chartType": "bar",
-      "groupBy": "character_title"
-    }
-  ],
-  [
-    {
-      "title": "Total transaction amounts by subject title",
+      "title": "Total transaction amounts by subject-object title",
       "description": "Total amounts in USD. Data from aggregate dataset, which includes redacted payments.",
       "provider": "carto",
       "domain": "phl.carto.com",
@@ -71,17 +49,6 @@ metadata: http://metadata.phila.gov/index.html#home/datasetdetails/5c4243d6a074d
       "groupBy": "sub_obj_title",
       "aggregateFunction": "sum",
       "aggregateField": "total_transaction_amount"
-    }
-  ],
-  [
-    {
-      "title": "Total number of transactions by subject title",
-      "description": "Total number of payments. Data from aggregate dataset, which includes redacted payments.",
-      "provider": "carto",
-      "domain": "phl.carto.com",
-      "dataset": "city_payments_aggregates",
-      "chartType": "bar",
-      "groupBy": "sub_obj_title"
     }
   ],
   [
@@ -95,17 +62,6 @@ metadata: http://metadata.phila.gov/index.html#home/datasetdetails/5c4243d6a074d
       "groupBy": "doc_ref_no_prefix_definition",
       "aggregateFunction": "sum",
       "aggregateField": "total_transaction_amount"
-    }
-  ],
-  [
-    {
-      "title": "Total number of transactions by document reference number prefix",
-      "description": "Total number of payments. Data from aggregate dataset, which includes redacted payments.",
-      "provider": "carto",
-      "domain": "phl.carto.com",
-      "dataset": "city_payments_aggregates",
-      "chartType": "bar",
-      "groupBy": "doc_ref_no_prefix_definition"
     }
   ],
   [
