--- a/pages/city_payments.html
+++ b/pages/city_payments.html
@@ -40,7 +40,7 @@ metadata: http://metadata.phila.gov/index.html#home/datasetdetails/5c4243d6a074d
   ],
   [
     {
-      "title": "Total transaction amounts by subject-object title",
+      "title": "Total transaction amounts by sub-object title",
       "description": "Total amounts in USD. Data from aggregate dataset, which includes redacted payments.",
       "provider": "carto",
       "domain": "phl.carto.com",
