--- a/pages/city_payments.html
+++ b/pages/city_payments.html
@@ -2,66 +2,67 @@
 title: City Payments
 description:  | 
   <p>This dataset includes checks and ACH payments made by the City during the fiscal year, 
-    which runs from July 1st through June 31st. 
+    which runs from July 1st through June 30th. 
     This dataset does not include all payments made by the City. 
     Namely, salary and benefits payments are not included here, 
     but information on City salaries can be found in the employee salaries and overtime dataset.</p>
-    <p>Please note: bar chart data is pulled from the city_payments_aggregates dataset. 
-    Filter table data is pulled from the city_payments dataset. For more details, see the metadata.</p>
-download: https://cityofphiladelphia.carto.com/u/phl/dataset/city_payments
+    <p>This dataset cannot be accurately compared directly with the other financial and accounting reports released by the City. 
+        The date of the payments made in the dataset may not always match up with the fiscal year that the services were rendered, which is one of the reasons why an accurate comparison between various financial datasets cannot be made.</p>
+    <p>Please note: Data is pulled from the city_payments dataset. For the full unredacted aggregate see city_payments_aggregates.</p>
+download: https://phl.carto.com/api/v2/sql?q=SELECT+*+FROM+city_payments&filename=city_payments&format=csv&skipfields=cartodb_id,the_geom,the_geom_webmercator
 metadata: http://metadata.phila.gov/index.html#home/datasetdetails/5c4243d6a074de085a899716/
 ---
 [
   [
     {
       "title": "Total transaction amounts by department",
-      "description": "Total amounts in USD. Data from aggregate dataset, which includes redacted payments.",
+      "description": "Total amounts in USD. Data from redacted dataset.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "city_payments_aggregates",
+      "dataset": "city_payments",
       "chartType": "bar",
       "groupBy": "department_title",
       "aggregateFunction": "sum",
-      "aggregateField": "total_transaction_amount"
+      "aggregateField": "transaction_amount"
     }
   ], 
   [
     {
       "title": "Total transaction amounts by character title",
-      "description": "Total amounts in USD. Data from aggregate dataset, which includes redacted payments.",
+      "description": "Total amounts in USD. Data from redacted dataset.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "city_payments_aggregates",
+      "dataset": "city_payments",
       "chartType": "bar",
       "groupBy": "character_title",
       "aggregateFunction": "sum",
-      "aggregateField": "total_transaction_amount"
+      "aggregateField": "transaction_amount"
     }
   ],
   [
     {
       "title": "Total transaction amounts by sub-object title",
-      "description": "Total amounts in USD. Data from aggregate dataset, which includes redacted payments.",
+      "description": "Total amounts in USD. Data from redacted dataset.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "city_payments_aggregates",
+      "dataset": "city_payments",
       "chartType": "bar",
       "groupBy": "sub_obj_title",
       "aggregateFunction": "sum",
-      "aggregateField": "total_transaction_amount"
+      "aggregateField": "transaction_amount"
     }
   ],
   [
     {
       "title": "Total transaction amounts by document reference number prefix",
-      "description": "Total amounts in USD. Data from aggregate dataset, which includes redacted payments.",
+      "description": "Total amounts in USD. Data from redacted dataset.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "city_payments_aggregates",
+      "dataset": "city_payments",
       "chartType": "bar",
       "groupBy": "doc_ref_no_prefix_definition",
       "aggregateFunction": "sum",
-      "aggregateField": "total_transaction_amount"
+      "aggregateField": "transaction_amount"
     }
   ],
   [
