--- a/pages/city_payments.html
+++ b/pages/city_payments.html
@@ -8,7 +8,7 @@ description:  |
     but information on City salaries can be found in the employee salaries and overtime dataset.</p>
     <p>This dataset cannot be accurately compared directly with the other financial and accounting reports released by the City. 
         The date of the payments made in the dataset may not always match up with the fiscal year that the services were rendered, which is one of the reasons why an accurate comparison between various financial datasets cannot be made.</p>
-    <p>Please note: Data is pulled from the city_payments dataset. For the full unredacted aggregate see city_payments_aggregates.</p>
+    <p>Please note: Data is pulled from the city_payments dataset. For the full unredacted aggregates see city_payments_aggregates.</p>
 download: https://phl.carto.com/api/v2/sql?q=SELECT+*+FROM+city_payments&filename=city_payments&format=csv&skipfields=cartodb_id,the_geom,the_geom_webmercator
 metadata: http://metadata.phila.gov/index.html#home/datasetdetails/5c4243d6a074de085a899716/
 ---
