Try adding extra single quote to handle bool text

--- a/pages/real-estate-tax-delinquencies.html
+++ b/pages/real-estate-tax-delinquencies.html
@@ -22,7 +22,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/57d9643afab162fe2708224
           "field": "is_actionable",
           "expression": {
             "type": "=",
-            "value": "true"
+            "value": "'true'"
           }
         }
       ]
