--- a/pages/real-estate-tax-delinquencies.html
+++ b/pages/real-estate-tax-delinquencies.html
@@ -21,8 +21,8 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/57d9643afab162fe2708224
         {
           "field": "is_actionable",
           "expression": {
-            "type": "=",
-            "value": cast(true as text)
+            "type": "ILIKE",
+            "value": "%true%"
           }
         }
       ]
