--- a/pages/city_payments.html
+++ b/pages/city_payments.html
@@ -1,7 +1,7 @@
 ---
 title: City Payments
 description:  | 
-  <p>This dataset includes checks and ACH payments made by the City during the fiscal year, 
+  <p>This dataset includes checks and ACH (direct deposit) payments made by the City during the fiscal year, 
     which runs from July 1st through June 30th. 
     This dataset does not include all payments made by the City. 
     Namely, salary and benefits payments are not included here, 
