change cleansealreviewstatus to reviewstatus

--- a/pages/li-clean-seal.html
+++ b/pages/li-clean-seal.html
@@ -27,7 +27,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca725c4ae4cd66d3ff6
       "domain": "phl.carto.com",
       "dataset": "li_clean_seal",
       "chartType": "pie",
-      "groupBy": "cleansealreviewstatus"
+      "groupBy": "reviewstatus"
     },
     {
       "title": "Case Resolution",
