--- a/pages/payments-aggregate.html
+++ b/pages/payments-aggregate.html
@@ -14,13 +14,13 @@ description: |
 
     <p>Please note: This dataset includes payments which are legal and security-sensitive.</p>
 download: https://www.opendataphilly.org/dataset/city-payments
-metadata: http://metadata.phila.gov/index.html#home/datasetdetails/5c4243d6a074de085a899716/
+metadata: http://metadata.phila.gov/index.html#home/datasetdetails/5c4243d6a074de085a899716/representationdetails/5c42446833d76c0858f4cd57/
 ---
 [
   [
     {
       "title": "Total transaction amounts by department",
-      "description": "Total amounts in USD. Data from detailed dataset.",
+      "description": "Total amounts in USD. Data from aggregate dataset.",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "city_payments_aggregates_fy2017",
@@ -33,7 +33,7 @@ metadata: http://metadata.phila.gov/index.html#home/datasetdetails/5c4243d6a074d
   [
     {
       "title": "Total transaction amounts by character title",
-      "description": "Total amounts in USD. Data from detailed dataset.",
+      "description": "Total amounts in USD. Data from aggregate dataset.",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "city_payments_aggregates_fy2017",
@@ -46,7 +46,7 @@ metadata: http://metadata.phila.gov/index.html#home/datasetdetails/5c4243d6a074d
   [
     {
       "title": "Total transaction amounts by sub-object title",
-      "description": "Total amounts in USD. Data from detailed dataset.",
+      "description": "Total amounts in USD. Data from aggregate dataset.",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "city_payments_aggregates_fy2017",
@@ -59,7 +59,7 @@ metadata: http://metadata.phila.gov/index.html#home/datasetdetails/5c4243d6a074d
   [
     {
       "title": "Total transaction amounts by document reference number prefix",
-      "description": "Total amounts in USD. Data from detailed dataset.",
+      "description": "Total amounts in USD. Data from aggregate dataset.",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "city_payments_aggregates_fy2017",
@@ -71,7 +71,7 @@ metadata: http://metadata.phila.gov/index.html#home/datasetdetails/5c4243d6a074d
   ],
   [
     {
-      "title": "Detailed City Payments (sensitive rows removed)",
+      "title": "Aggregate City Payments (sensitive data included)",
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
