--- a/pages/payments.html
+++ b/pages/payments.html
@@ -1,5 +1,5 @@
 ---
-title: Payments
+title: Detailed City Payments
 description: |
     <p>This dataset includes checks and ACH (direct deposit) payments
     made by the City during the fiscal year 2017, which runs from July 1st 2016 through June
