--- a/pages/crime-incidents.html
+++ b/pages/crime-incidents.html
@@ -1,14 +1,13 @@
 ---
 title: Crime Incidents 2006 - Present
 description: |
-  Philadelphia Police Department crime incidents from calendar year 2006 to present,
+  <p>Philadelphia Police Department crime incidents from calendar year 2006 to present,
   including Part I and Part II crimes. UCR codes are generalized and incident
   locations are rounded to the hundred block. These counts may not coincide exactly
-  with data that is submitted to the Uniformed Crime Reporting (UCR) system.
+  with data that is submitted to the Uniformed Crime Reporting (UCR) system.</p>
 
-  Note: All figures presented are based on preliminary Philadelphia Police Department crime data.
-  This crime data is subject to reclassification upon further investigation.
-
+  <p>Note: All figures presented are based on preliminary Philadelphia Police Department crime data.
+  This crime data is subject to reclassification upon further investigation.</p>
 download: https://www.opendataphilly.org/dataset/crime-incidents
 metadata: http://metadata.phila.gov/#home/datasetdetails/5543868920583086178c4f8e/representationdetails/570e7621c03327dc14f4b68d/
 ---
