--- a/pages/li-business-licenses.html
+++ b/pages/li-business-licenses.html
@@ -40,7 +40,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543865a20583086178c4ed
       "description": "License Status",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": business_licenses",
+      "dataset": "business_licenses",
       "chartType": "pie",
       "groupBy": "licensestatus"
     }
