repoint commercial acitivity licenses
to new carto table

--- a/pages/li-commercial-activity-licenses.html
+++ b/pages/li-commercial-activity-licenses.html
@@ -12,7 +12,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca6f5c4ae4cd66d3ff5
       "description": "When the Commercial Activity License was issued.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_com_act_licenses",
+      "dataset": "com_act_licenses",
       "chartType": "datetime",
       "groupBy": "date_trunc('month', issuedate)",
       "triggerField": "issuedate"
@@ -24,7 +24,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca6f5c4ae4cd66d3ff5
     "description": "Type of Legal Entity that holds License.",
     "provider": "carto",
     "domain": "phl.carto.com",
-    "dataset": "li_com_act_licenses",
+    "dataset": "com_act_licenses",
     "chartType": "pie",
     "groupBy": "legalentitytype"
     },
@@ -33,7 +33,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca6f5c4ae4cd66d3ff5
       "description": "Status of Commercial Activity License.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_com_act_licenses",
+      "dataset": "com_act_licenses",
       "chartType": "pie",
       "groupBy": "licensestatus"
     }
@@ -44,7 +44,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca6f5c4ae4cd66d3ff5
       "description": "Name of company that holds the Commercial Activity License",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_com_act_licenses",
+      "dataset": "com_act_licenses",
       "chartType": "bar",
       "groupBy": "companyname"
     }
@@ -55,7 +55,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca6f5c4ae4cd66d3ff5
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_com_act_licenses",
+      "dataset": "com_act_licenses",
       "columnsToHide": [
         "cartodb_id",
         "objectid",
