--- a/pages/li-demolitions.html
+++ b/pages/li-demolitions.html
@@ -2,8 +2,8 @@
 title: L&I Demolitions
 description: |
   <p>Inventory of building demolitions occurring within the City of Philadelphia. This includes both demolitions performed by private owners/contractors and by the Dpt of Licenses and Inspections due to dangerous building conditions</p>
-download: https://www.opendataphilly.org/dataset/licenses-and-inspections-demolitions
-metadata: http://metadata.phila.gov/#home/datasetdetails/58dbd271fe779d33cf0e8cad/representationdetails/58dbd271fe779d33cf0e8cb1/
+download: https://www.opendataphilly.org/dataset/building-demolitions
+metadata: https://metadata.phila.gov/#home/datasetdetails/58dbd271fe779d33cf0e8cad/representationdetails/5e989bd68d478300195737b0/
 ---
 [
   [
@@ -12,7 +12,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/58dbd271fe779d33cf0e8ca
       "description": "Date building permit or L+I contractor bid was closed.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_demolitions",
+      "dataset": "demolitions",
       "chartType": "datetime",
       "groupBy": "date_trunc('month', completed_date)",
       "triggerField": "completed_date",
@@ -32,7 +32,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/58dbd271fe779d33cf0e8ca
       "title":  "Census Tract",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_demolitions",
+      "dataset": "demolitions",
       "chartType": "choropleth",
       "groupBy": "censustract",
       "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+census_tracts_2010&format=geojson",
@@ -44,7 +44,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/58dbd271fe779d33cf0e8ca
       "description": "The type of demolition. 'Permit' means a demolition was an action of a private owner, who was issued a building permit from L+I. 'Violation Case' means the demolition was an action of the Department of License and Inspections, due to dangerous building conditions, as a result of violation of the city's building code.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_demolitions",
+      "dataset": "demolitions",
       "chartType": "pie",
       "groupBy": "record_type"
     }
@@ -55,16 +55,16 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/58dbd271fe779d33cf0e8ca
       "description": "Owner of the property as identified by the Office of Property Assessment.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_demolitions",
+      "dataset": "demolitions",
       "chartType": "bar",
-      "groupBy": "ownername"
+      "groupBy": "opa_owner"
     },
     {
       "title": "Status",
       "description": "Status of the demolition.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_demolitions",
+      "dataset": "demolitions",
       "chartType": "pie",
       "groupBy": "status"
     }
@@ -75,9 +75,9 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/58dbd271fe779d33cf0e8ca
       "description": "Type of applicant on record with private permit.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_demolitions",
+      "dataset": "demolitions",
       "chartType": "bar",
-      "groupBy": "applicantcapacity"
+      "groupBy": "applicanttype"
     }
   ],
   [
@@ -86,7 +86,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/58dbd271fe779d33cf0e8ca
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_demolitions",
+      "dataset": "demolitions",
       "columnsToHide": [
         "cartodb_id",
         "objectid",
