--- a/pages/li-trade-licenses.html
+++ b/pages/li-trade-licenses.html
@@ -6,7 +6,7 @@ description: |
   individual's name, license number, license status issue date, expiration
   date, company name, and revenue code. </p>
 download: https://www.opendataphilly.org/dataset/licenses-and-inspections-trade-licenses
-metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca6e5c4ae4cd66d3ff55/representationdetails/57e52fd0d640401d5d594f45/
+metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca6e5c4ae4cd66d3ff55/representationdetails/5e9a0865a0da54001b1d5f49/
 ---
 [
   [
@@ -15,7 +15,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca6e5c4ae4cd66d3ff5
       "description": "The date the license was issued.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_trade_licenses",
+      "dataset": "trade_licenses",
       "chartType": "datetime",
       "groupBy": "date_trunc('year', to_date(issuedate, 'MM/DD/YYYY HH24:MI:SS'))",
       "triggerField": "issuedate",
@@ -38,7 +38,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca6e5c4ae4cd66d3ff5
       "description": "The type of license",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_trade_licenses",
+      "dataset": "trade_licenses",
       "chartType": "bar",
       "groupBy": "licensetype"
     },
@@ -47,7 +47,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca6e5c4ae4cd66d3ff5
       "description": "License Status",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_trade_licenses",
+      "dataset": "trade_licenses",
       "chartType": "pie",
       "groupBy": "licensestatus"
     }
@@ -58,7 +58,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca6e5c4ae4cd66d3ff5
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_trade_licenses",
+      "dataset": "trade_licenses",
       "columnsToHide": [
         "cartodb_id",
         "objectid",
