--- a/pages/li-trade-licenses.html
+++ b/pages/li-trade-licenses.html
@@ -10,22 +10,21 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca6e5c4ae4cd66d3ff
 ---
 [
   [
-    {
+  {
       "title": "Issue Date",
       "description": "The date the license was issued.",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "trade_licenses",
       "chartType": "datetime",
-      "groupBy": "date_trunc('year', to_date(issuedate, 'MM/DD/YYYY HH24:MI:SS'))",
+      "groupBy": "date_trunc('month', issuedate)",
       "triggerField": "issuedate",
-      "baseFilters":
-      [
+      "baseFilters": [
         {
           "field": "issuedate",
-          "expression":
-              "type": "!=",
-              "value": ""
+          "expression": {
+            "type": "<=",
+            "value": "now()"
           }
         }
       ]
