--- a/pages/li-trade-licenses.html
+++ b/pages/li-trade-licenses.html
@@ -4,7 +4,7 @@ description: |
   <p>Information regarding individuals who have applied for trades licenses such
   as General Contractor, Master Plumber, and more. Information includes the
   individual's name, license number, license status issue date, expiration
-  date, company name, and revenue code. </p>
+  date, company name, and revenue codes. </p>
 download: https://www.opendataphilly.org/dataset/licenses-and-inspections-trade-licenses
 metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca6e5c4ae4cd66d3ff55/representationdetails/5e9a0865a0da54001b1d5f49/
 ---
