--- a/pages/li-inspections.html
+++ b/pages/li-inspections.html
@@ -1,42 +1,42 @@
 ---
-title: L&I Case Inspections
+title: L&I Case Investigations
 description: |
-  <p>All inspections completed on a property with property
+  <p>All investigations completed on a property with property
   maintenance violations by an inspector of the Department of Licenses & Inspections.</p>
 download: https://www.opendataphilly.org/dataset/licenses-and-inspections-inspections
-metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca785c4ae4cd66d3ff80/representationdetails/57d1cbd5f802132847d550ba/
+metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca785c4ae4cd66d3ff80/representationdetails/5e986970b2c39b001522fb9d/
 ---
 [
   [
     {
       "title": "Completion Date",
-      "description": "The date that the inspection was completed and it was entered into the L+I Hansen database.",
+      "description": "The date that the investigation was completed and it was entered into the L&I database.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_case_inspections",
+      "dataset": "case_investigations",
       "chartType": "datetime",
       "groupBy": "date_trunc('month', inspectioncompleted)",
-      "triggerField": "inspectioncompleted"
+      "triggerField": "investigationcompleted"
     }
   ],
   [
     {
-      "title": "Inspection Description",
-      "description": "L+I defined description of the type of inspection",
+      "title": "Investigation Description",
+      "description": "L&I defined description of the type of investigation",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_case_inspections",
+      "dataset": "case_investigations",
       "chartType": "bar",
-      "groupBy": "inspectiondescription"
+      "groupBy": "casepriority"
     },
     {
       "title": "Owner Name",
       "description": "Current owner of the property",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_case_inspections",
-      "chartType": "bar",
-      "groupBy": "ownername"
+      "dataset": "case_investigations",
+      "chartType": "pie",
+      "groupBy": "opa_owner"
     }
   ],
   [
@@ -44,7 +44,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca785c4ae4cd66d3ff8
       "title":  "Census Tract",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_case_inspections",
+      "dataset": "case_investigations",
       "chartType": "choropleth",
       "groupBy": "censustract",
       "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+census_tracts_2010&format=geojson",
@@ -52,21 +52,21 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543ca785c4ae4cd66d3ff8
       "boundariesId": "name10_padded"
     },
     {
-      "title":  "Inspection Status",
+      "title":  "Investigation Status",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_case_inspections",
+      "dataset": "case_investigations",
       "chartType": "pie",
-      "groupBy": "inspectionstatus"
+      "groupBy": "investigationstatus"
     }
   ],
   [
     {
-      "title": "Case Inspections",
+      "title": "Case Investigations",
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_case_inspections",
+      "dataset": "case_investigations",
       "columnsToHide": [
         "cartodb_id",
         "objectid",
