--- a/pages/li-inspections.html
+++ b/pages/li-inspections.html
@@ -21,7 +21,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca785c4ae4cd66d3ff
   ],
   [
     {
-      "title": "Investigation Description",
+      "title": "Case Priority",
       "description": "L&I defined description of the type of investigation",
       "provider": "carto",
       "domain": "phl.carto.com",
