change chart type
changed chart type for owner name to bar chart to better show data

--- a/pages/li-inspections.html
+++ b/pages/li-inspections.html
@@ -35,7 +35,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca785c4ae4cd66d3ff
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "case_investigations",
-      "chartType": "pie",
+      "chartType": "bar",
       "groupBy": "opa_owner"
     }
   ],
