--- a/pages/li-inspections.html
+++ b/pages/li-inspections.html
@@ -26,7 +26,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca785c4ae4cd66d3ff
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "case_investigations",
-      "chartType": "bar",
+      "chartType": "pie",
       "groupBy": "casepriority"
     },
     {
